<resources>
    <string name="app_name">Restaurant Application </string>

    <string name="slogan">Your perfect place for an authentic meal</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome</string>
    <string name="nav_header_subtitle">Nepalese and Indian Restaurant</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_contact">Contact</string>


    <string name="menu_logOut">Log Out</string>
</resources>
