<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:iconTint="@android:color/white"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_restaurant"
            android:iconTint="@android:color/white"
            android:title="@string/menu_menu" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart"
            android:iconTint="@android:color/white"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/access_time"
            android:iconTint="@android:color/white"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contacts"
            android:iconTint="@android:color/white"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/logout"
            android:iconTint="@android:color/white"
            android:title="@string/menu_logOut" />

    </group>
</menu>
